--- a/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/cloud-provider-payment8001/src/main/resources/application.yml
@@ -38,6 +38,11 @@ eureka:
 #    #Eureka服务端在收到最后一次心跳后等待时间上限，单位为秒(默认是90秒)，超时将剔除服务
 #    lease-expiration-duration-in-seconds: 2
 
+ribbon:
+#  指的是建立链接所用的时间，适用于网络情况正常情况下两端链接所用的时间
+  ReadTimeout:  5000
+#  指的是建立链接后从服务器读取到可用资源时间
+  ConnectTimeout: 5000
 
 mybatis:
   mapperLocations: classpath:mapper/*.xml
