--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>cloud-provider-payment8001</module>
         <module>cloud-provider-payment8002</module>
         <module>cloud-provider-payment8004</module>
+        <module>cloud-provider-hystrix-payment8001</module>
         <module>cloud-providerconsul-payment8006</module>
         <module>cloud-consumer-order80</module>
         <module>cloud-consumerzk-order80</module>
