--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>cloud-eureka-server7001</module>
         <module>cloud-eureka-server7002</module>
         <module>cloud-consumer-feign-order80</module>
+        <module>cloud-consumer-feign-hystrix-order80</module>
     </modules>
 
 
