--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,8 @@
         <module>cloud-eureka-server7002</module>
         <module>cloud-consumer-feign-order80</module>
         <module>cloud-consumer-feign-hystrix-order80</module>
+        <module>cloud-consumer-hystrix-dashboard9001</module>
+        <module>cloud-gateway-gateway9527</module>
     </modules>
 
 
