--- a/cloud-gateway-gateway9527/src/main/resources/application.yml
+++ b/cloud-gateway-gateway9527/src/main/resources/application.yml
@@ -4,18 +4,22 @@ spring:
   application:
     name: cloud-gateway
   cloud:
-#    路由配置方式1
     gateway:
+      discovery:
+        locator:
+          enabled: true  #开启从注册中心动态创建路由的功能，利用微服务名进行路由
       routes:
-      - id: payment_routh #路由的ID，没有固定规则但要求唯一，建议配合服务名
-        uri: http://localhost:8001   #匹配后提供服务的路由地址
-        predicates:
-          - Path=/payment/get/**   #断言,路径相匹配的进行路由
+        - id: payment_routh #路由的ID，没有固定规则但要求唯一，建议配合服务名
+          #uri: http://localhost:8001   #匹配后提供服务的路由地址
+          uri: lb://CLOUD-PROVIDER-PAYMENT
+          predicates:
+            - Path=/payment/get/**   #断言,路径相匹配的进行路由
 
-      - id: payment_routh2
-        uri: http://localhost:8001
-        predicates:
-          - Path=/payment/lb/**   #断言,路径相匹配的进行路由
+        - id: payment_routh2
+          #uri: http://localhost:8001   #匹配后提供服务的路由地址
+          uri: lb://CLOUD-PROVIDER-PAYMENT
+          predicates:
+            - Path=/payment/lb/**   #断言,路径相匹配的进行路由
 
 
 eureka:
@@ -26,4 +30,7 @@ eureka:
       register-with-eureka: true
       fetch-registry: true
       defaultZone: http://eureka7001.com:7001/eureka
+
+
+
 
