--- a/cloud-provider-payment8001/pom.xml
+++ b/cloud-provider-payment8001/pom.xml
@@ -14,6 +14,12 @@
     <dependencies>
 
 
+        <!--包含了sleuth+zipkin-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-zipkin</artifactId>
+        </dependency>
+
         <!-- 引入自己定义的api通用包，可以使用Payment支付Entity -->
         <dependency>
             <groupId>com.clay.springcloud</groupId>
