--- a/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/cloud-provider-payment8001/src/main/resources/application.yml
@@ -5,10 +5,10 @@ spring:
   application:
     name: cloud-provider-payment
   zipkin:
-    base-url: http://localhost:9411
+    base-url: http://localhost:9411 #9411为zipkin本地服务端
   sleuth:
     sampler:
-    #采样率值介于 0 到 1 之间，1 则表示全部采集
+    #采样率值介于 0 到 1 之间，1 则表示全部采集 一般使用0.5
     probability: 1
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource            # 当前数据源操作类型
